<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racebot_control</name>
  <version>0.0.0</version>
  <description>The racebot_control package</description>
  <maintainer email="zyx@todo.todo">zyx</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <!-- <depend>controller_manager</depend> -->
  <!-- <depend>ros2_control</depend> -->
  <!-- <depend>ros2_controllers</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
